--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<title>Nouveau Projet De Jeu</title>
+	<script src="threads.js"></script>
 	<style type='text/css'>
 
 		body {
